# face_beautification_android_demo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yadro/face_beautification_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  filters.cpp  native-lib.cpp
app/src/main/cpp/filters/: CMakeLists.txt  filters.cpp
app/src/main/cpp/presenter/: CMakeLists.txt  presenter.cpp
app/src/main/java/com/example/test/: BBox.java  BlazeFace.java  FaceMesh.java  FaceMeshMData.java  FacialLandmarks.java  Filters.java  MainActivity.java  MetaData.java  ResizeLetterbox.java  TFLiteModel.java
app/src/main/java/com/yadro/face_beautification_demo/: BBox.java  BlazeFace.java  FaceMesh.java  FaceMeshMData.java  FacialLandmarks.java  Filters.java  MainActivity.java  MetaData.java  PopupSettings.java  Presenter.java  ResizeLetterbox.java  TFLiteImageAnalyzer.java  TFLiteModel.java
app/src/main/res/drawable/: round_button.xml  settings.xml  settings_fill0_wght500_grad200_opsz48.xml
app/src/main/res/layout/: activity_main.xml  popup_settings.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yadro/face_beautification_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libs/: tensorflow-lite.aar
